@@ -1,3 +1,8 @@
+2007-07-08  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (cursor_size_scale_value_changed_cb): plug yet
+	another leak
+
 2007-07-08  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance.glade: change the button order in themes tab.
